# msauber_stack

./: .dockerignore  .gitignor  .gitignore  Dockerfile  README.md  cose_utili_lol.txt  docker-compose.yml  env_msauber.sh  frames_2026-03-18_14.59.12.gv  pyproject.toml  requirements.txt  start_env.sh  utilities.txt
.devcontainer/: devcontainer.json
install/: local_setup.sh  setup.sh
install/msauber_bringup/share/msauber_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/msauber_control/lib/msauber_control/: teleop_bridge
install/msauber_control/share/msauber_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/msauber_description/share/msauber_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/msauber_navigation/lib/msauber_navigation/: mpc_node  odom_tf_bridge
install/msauber_navigation/share/msauber_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/msauber_perception/lib/msauber_perception/: cone_detection_node
install/msauber_perception/share/msauber_perception/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/msauber_sim/share/msauber_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/msauber_sim/share/msauber_sim/worlds/: pista.sdf  (+3 more)
install/yolo_bringup/share/yolo_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/yolo_msgs/share/yolo_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/yolo_ros/lib/yolo_ros/: debug_node  detect_3d_node  tracking_node  yolo_node
install/yolo_ros/share/yolo_ros/: package.dsv  package.ps1  package.sh  package.xml
log/: latest_build
scripts/: msauber_env_set.sh  msauber_install.sh  stop_sim.sh
src/msauber_bringup/: package.xml  setup.cfg  setup.py
src/msauber_bringup/launch/: bringup.launch.py  sim_bringup.launch.py
src/msauber_bringup/rviz/: sim_bringup.rviz
src/msauber_control/: package.xml  setup.cfg  setup.py
src/msauber_control/config/: ackerman_config.yaml  effort_control_config.yaml
src/msauber_control/launch/: control.launch.py
src/msauber_control/msauber_control/: teleop_bridge.py
src/msauber_description/: package.xml  setup.cfg  setup.py
src/msauber_description/launch/: description.launch.py
src/msauber_description/meshes/: realsense.stl
src/msauber_description/rviz/: description.rviz
src/msauber_description/urdf/: core.xacro  gazebo_plugins.xacro  gazebo_plugins_acker.xacro  macros.xacro  msauber.xacro  sensors.xacro
src/msauber_navigation/: package.xml  setup.cfg  setup.py
src/msauber_navigation/config/: full_nav2_params.yaml  nav2_dubin_params.yaml  nav2_param.yaml  nav2_params.yaml
src/msauber_navigation/launch/: full_nav.launch.py  nav.launch.py
src/msauber_navigation/maps/: my_map.pgm  my_map.yaml  test_map.pgm
src/msauber_navigation/msauber_navigation/: MPC.py  MPC_node.py  goal_pose_to_path.py  odom_tf_bridge.py
src/msauber_perception/: package.xml  setup.cfg  setup.py
src/msauber_perception/config/: yolo.yaml
src/msauber_perception/launch/: perception.launch.py  yolo_bringup.launch.py
src/msauber_perception/msauber_perception/: camera_viewer_node.py  cone_detection_node.py
src/msauber_sim/: package.xml  setup.cfg  setup.py
src/msauber_sim/config/: gui.config
src/msauber_sim/launch/: sim.launch.py
src/msauber_sim/models/pista_ground/: model.config  model.sdf
src/msauber_sim/worlds/: cone_empty.sdf  my_empty.sdf  pista.sdf  sonoma.sdf
src/my_gz_gui/: CMakeLists.txt  package.xml
src/my_gz_gui/env-hooks/: my_gz_gui.dsv  my_gz_gui.sh  my_gz_gui.sh.in
src/my_gz_gui/include/my_gz_gui/: MyGuiPlugin.hh
src/my_gz_gui/qml/: my_gz_gui.qml  qml.qrc
src/my_gz_gui/src/: MyGuiPlugin.cc
(+289 files in other folders)
