<?xml version="1.0"?>
<package format="3">
  <name>msauber_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for msauber</description>

  <maintainer email="you@example.com">andreas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>msauber_description</exec_depend>
  <exec_depend>msauber_control</exec_depend>
  <exec_depend>msauber_sim</exec_depend>
  <exec_depend>msauber_perception</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
