<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_gz_gui</name>
  <version>0.1.0</version>
  <description>Gazebo Harmonic GUI plugin for MSAUBER control</description>
  <maintainer email="andreas21steffens@gmail.com">andreas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>gz-gui8</depend>
  <depend>gz-transport13</depend>
  <depend>gz-msgs10</depend>
  <depend>gz-sim8</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
